--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
             <div class="screen active" id="screen-home">
                 <div class="arrow-placeholder"></div>
                 <div class="screen-content">
-                    <h1>FZUV</h1>
+                    <h1>SCREEN指引</h1>
                     <div class="nav-links">
                         <div class="nav-link" data-target="screen-work">1. 工作</div>
                         <div class="nav-link" data-target="screen-achievement">2. 成就</div>
-                        <div class="nav-link" data-target="screen-our-advantages">3. 我们的优势</div>
-                        <div class="nav-link" data-target="screen-join">4. 加入我们</div>
+                        <div class="nav-link" data-target="screen-our-advantages">TBD</div>
+                        <div class="nav-link" data-target="screen-join">TBD</div>
+                        <p>主页样式待定</p>
                     </div>
                 </div>
                 <img class="arrow arrow-down" src="./img/icon/downarrow.png" alt="下一页">
@@ -303,5 +304,6 @@
         <audio id="bgMusic" src="./music/testmusic.mp3" loop></audio>
         <script src="./js/script.js"></script>
 </body>
+
 
 </html>
